--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -82,15 +82,14 @@
       height: 100%;
     }
 
-    /* MINIMALE AANPASSING: rode lijnen boven cirkel */
     .crosshair {
-      position: relative;  /* zorg dat z-index werkt */
+      position: relative;
+      z-index: 2;
       width: 30px;
       height: 30px;
       left: 0;
       top: 0;
       pointer-events: none;
-      z-index: 2;          /* rode lijnen boven de cirkel */
     }
 
     .crosshair::before,
@@ -116,6 +115,7 @@
 
     .highlight-circle {
       position: absolute;
+      z-index: 1;
       width: 50px;
       height: 50px;
       border-radius: 50%;
@@ -123,7 +123,6 @@
       left: -10px;
       top: -10px;
       pointer-events: none;
-      z-index: 1;          /* cirkel achter rode lijnen */
     }
 
     h2 {
@@ -344,25 +343,21 @@
         return cross;
       }
 
-      const container1 = document.getElementById('container1' + klasse);
-      const container2 = document.getElementById('container2' + klasse);
+      const container1 = document.getElementById(`container1${klasse}`);
+      const container2 = document.getElementById(`container2${klasse}`);
 
-      // Eerst alle bestaande crosshairs verwijderen
-      container1.querySelectorAll('.crosshair').forEach(el => el.remove());
-      container2.querySelectorAll('.crosshair').forEach(el => el.remove());
+      container1.innerHTML = `<h2 style="color: red;">Opstelling 5/8/13/14 (Klasse ${klasse})</h2>`;
+      container1.appendChild(createCrosshair(x_pixel1, y_scale1 - y_pixel1));
 
-      // Toevoegen van crosshairs op container1 en container2
-      container1.appendChild(createCrosshair(x_pixel1, y_pixel1));
-      container2.appendChild(createCrosshair(x_pixel2, y_pixel2));
+      container2.innerHTML = `<h2 style="color: red;">Opstelling 2 (Klasse ${klasse})</h2>`;
+      container2.appendChild(createCrosshair(x_pixel2, y_scale2 - y_pixel2));
+
+      container1.scrollIntoView({ behavior: 'smooth', block: 'center' });
+
+      if (window.innerWidth <= 600) {
+        document.body.style.zoom = "0.7";
+      }
     });
-
-    function openModal(modalId) {
-      document.getElementById(modalId).style.display = 'block';
-    }
-
-    function closeModal(modalId) {
-      document.getElementById(modalId).style.display = 'none';
-    }
   </script>
 </body>
 </html>
