--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -95,7 +95,7 @@
     .crosshair::after {
       content: '';
       position: absolute;
-      background-color: red;
+      background-color: rgb(255, 49, 49);
     }
 
     .crosshair::before {
@@ -117,7 +117,7 @@
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      background-color: rgba(255, 255, 0, 0.3);
+      background-color: rgba(0, 0, 128, 0.5);
       left: -10px;
       top: -10px;
       pointer-events: none;
