--- a/handigelinks.html
+++ b/handigelinks.html
@@ -125,11 +125,13 @@
         <li><a href="https://dosimetrie.nl/Account/LogOn" class= "link3"><i class="fa-solid fa-user-shield"></i> Mirion Dosisoverzicht</a></li>
         <li><a href="https://www.appsheet.com/start/5caf5030-44ab-45f3-a598-74dab035a6ae" class= "link3"><i class="fa-solid fa-clock"></i> Apptime</a></li>
         <li><a href="https://applusglobal-my.sharepoint.com/:x:/r/personal/l_korwinpiotrowski_applusglobal_com/Documents/Planning%202025/Planning%202025%20rev.2.xlsx?d=w560df1fe6d6845b4b2d1155fa47b7217&csf=1&web=1&e=hjOoBS&nav=MTVfezAwMDAwMDAwLTAwMDEtMDAwMC0wMDAwLTAwMDAwMDAwMDAwMH0" class= "link4"><i class="fa-regular fa-calendar-days"></i> Planning </a></li>
+        <li><a href="https://applusglobal.sharepoint.com/teams/ApplicationStartPage" class= "link1"><i class="fa-solid fa-square"></i>Application Startpage</a></li>
         <li><a href="https://portal.srxp.com/#/login" class= "link2"><i class="fa-solid fa-receipt"></i> SRXP Declaratie</a></li>
         <li><a href="https://werknemer.verzuimsignaal.nl" class= "link2"><i class="fa-solid fa-head-side-cough"></i> Verzuimportaal</a></li>
         <li><a href="http://outlook.com/owa/assincoapplus.com" class= "link1"><i class="fa-regular fa-envelope"></i>Email</a></li>
         <li><a href="https://applus-textiles.promonline.nl/base/public/login?returnURL=%2Fshop%2Fhome" class= "link3"><i class="fa-solid fa-shirt"></i> Kleding</a></li>
         <li><a href="https://www.vdp.com/NL/Catalogues/viewcatalog/4640/" class= "link4"><i class="fa-solid fa-helmet-safety"></i>Werkkleding</a></li>
+        <li><a href="https://applusglobal.sharepoint.com/sites/energyandindustry-neur/BUA-NL/HRNL/Default.aspx?RootFolder=%2Fsites%2Fenergyandindustry%2Dneur%2FBUA%2DNL%2FHRNL%2FInformatie%20voor%20medewerkers%2F1%2E%20Cao%20Metalektro%20en%20Personeelsgids%20Applus%2B%20Nederland%20%2D%20CLA%20Metalektro%20and%20Personnel%20Handbook%20Applus%2B%20Netherlands&FolderCTID=0x01200083B4E7B7DAB8D541BE7C94C1B27EABC0&View=%7BAA8CB7AA%2DE10C%2D4402%2D8596%2DE6CF0558AAB6%7D" class= "link2"><i class="fa-solid fa-book-open"></i>Blauwe boekje</a></li>
     </ul>
 
 </body>
