--- a/zinnen.html
+++ b/zinnen.html
@@ -49,8 +49,7 @@
     <p style="color: #fcf1a4; font-size: 1.5rem;" onclick="copyText(this)">In consultancy with the client, Se75 used instead of X-ray due to the limited accessibility and/or radiation safety.</p>
     <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">2 films (D4 & D5) per exposure used to get the correct density in the parent material and the weld.</p>
     <p style="color: #fcf1a4; font-size: 1.5rem;" onclick="copyText(this)">Due to the geometry of the object, limited accessibility and/or radiation safety, Se75 used instead of X-ray.</p>
-    <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">Ir192 used instead of X-ray because of the penetrated thickness.
-Penetrated thickness is the sum of the wall-thickness, Orifice head thickness, and weld reinforcement.</p>
+    <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">Due to limited accessibility, the IQI is placed perpendicular to the weld</p>
     <p style="color: #fcf1a4; font-size: 1.5rem;" onclick="copyText(this)">2 films (D5 & D7) per exposure used to have a larger range in density because of the difference in wall thickness.</p>
 
 </body>
