--- a/test.html
+++ b/test.html
@@ -1,204 +1,184 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bundelgrootte</title>
-    <link rel="stylesheet" href="styles.css">
-    <a href="index.html" class="home-icon"><i class="fas fa-home"></i></a>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        label, select, input {
-            display: block;
-            width: 100%;
-            margin-bottom: 10px;
-        }
-        select, input {
-            padding: 8px;
-            font-size: 16px;
-        }
-        button {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            background-color: #646464;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: #666;
-        }
-        .result {
-            margin-top: 20px;
-            padding: 10px;
-            color: black;
-            text-shadow: none;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-        }
-        .hidden {
-            display: none;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="styles.css">
+  <a href="index.html" class="home-icon"><i class="fas fa-home"></i></a>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <title>Bundelgrootte</title>
+  <style>
+    .container {
+      max-width: 400px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    label, select, input {
+      display: block;
+      width: 100%;
+      margin-bottom: 10px;
+    }
+    select, input {
+      padding: 8px;
+      font-size: 16px;
+    }
+    button {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      background-color: #646464;
+      color: white;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    button:hover {
+      background-color: #666;
+    }
+    .result {
+      margin-top: 20px;
+      padding: 10px;
+      color: black;
+      background-color: #f0f0f0;
+      border: 1px solid #ccc;
+    }
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 <body>
-    <!-- Info-knop -->
-    <button class="info-btn" onclick="openModal('myModal')">i</button>
 
-    <!-- Info-modal -->
-    <div id="myModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal('myModal')">&times;</span>
-            <p>Bundelgrootte te berekenen of de benodigde FFD. Deze tool gaat uit van een vlakke plaat en neemt de ronding van een vat niet mee in de berekening, behalve bij keuze 'vat (ASME B)'! De marge is er om theoretische waarden van de bundelhoek zoals de fabrikant heeft gegeven in de praktijk te kunnen gebruiken, standaard staat deze op 25% maar je kan deze verlagen als je van risico houdt.<br><br>Gebruikte formules:
-            <br><strong>Vlakke plaat:</strong> Tan(bundelhoek/2) = (bundelbereik/2)/FFD
-            <br><strong>Vat (ASME B):</strong> bundelbreedte = Diameter × arcsin((Diameter / (2 × FFD)) × sin(α / 2))</p>
-        </div>
+  <button class="info-btn" onclick="openModal('myModal')">i</button>
+
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal('myModal')">&times;</span>
+      <p>Berekening van bundelgrootte of benodigde FFD. Bij de optie ‘vat (ASME B)’ wordt de kromming van het vat wél meegenomen. De opgegeven FFD is dan de afstand van de bron tot de wand van het vat (niet tot het centrum).</p>
+    </div>
+  </div>
+
+  <div class="container">
+    <h1 style="color: #F5DF4D; text-align: center;">Bundelgrootte</h1>
+
+    <label for="tubeSelect">Kies een röntgenbuis:</label>
+    <select id="tubeSelect">
+      <option value="yxlon300">Yxlon 300 3mm brandvlek: 40° x 55°</option>
+      <option value="smartEvo300">Yxlon Smart EVO 300DS: 30° x 60°</option>
+      <option value="balteauCeram300">Balteau Ceram 300 Directional: 40° x 50°</option>
+    </select>
+
+    <label for="calcType">Wat wil je weten:</label>
+    <select id="calcType">
+      <option value="" disabled selected>Kies een berekening</option>
+      <option value="size">Bundelgrootte op een bepaalde FFD</option>
+      <option value="distance">Benodigde FFD voor een bepaalde bundelgrootte</option>
+      <option value="vat">Bundelbreedte bij een vat (ASME B)</option>
+    </select>
+
+    <div id="ffdField" class="hidden">
+      <label for="ffd">Film Focus Afstand (FFD) in cm:</label>
+      <input type="number" id="ffd" step="any">
     </div>
 
-    <div class="container">
-        <h1 style="color: #F5DF4D; text-align: center;">Bundelgrootte</h1>
-
-        <label for="tubeSelect">Kies een röntgenbuis:</label>
-        <select id="tubeSelect">
-            <option value="yxlon300">Yxlon 300 3mm brandvlek: 40° x 55°</option>
-            <option value="smartEvo300">Yxlon Smart EVO 300DS: 30° x 60°</option>
-            <option value="balteauCeram300">Balteau Ceram 300 Directional: 40° x 50°</option>
-        </select>
-
-        <label for="calcType">Wat wil je weten:</label>
-        <select id="calcType">
-            <option value="" disabled selected>Kies een berekening</option>
-            <option value="size">Bundelgrootte op een bepaalde FFD</option>
-            <option value="distance">Benodigde FFD voor een bepaalde bundelgrootte</option>
-            <option value="vessel">Bundelbreedte bij vat (ASME B)</option>
-        </select>
-
-        <div id="ffdField" class="hidden">
-            <label for="ffd">Film Focus Afstand (FFD) in cm:</label>
-            <input type="number" id="ffd" step="any">
-        </div>
-
-        <div id="beamSizeField" class="hidden">
-            <label for="beamSize">Gewenste bundelbereik in cm:</label>
-            <input type="number" id="beamSize" step="any">
-        </div>
-
-        <div id="marginField" class="hidden">
-            <label for="margin">Voer margepercentage in (%):</label>
-            <input type="number" id="margin" value="25" step="any" min="0">
-        </div>
-
-        <div id="diameterField" class="hidden">
-            <label for="diameter">Diameter van het vat (in cm):</label>
-            <input type="number" id="diameter" step="any">
-        </div>
-
-        <button onclick="calculate()">Bereken</button>
-        <div id="result" class="result"></div>
+    <div id="beamSizeField" class="hidden">
+      <label for="beamSize">Gewenste bundelbereik in cm:</label>
+      <input type="number" id="beamSize" step="any">
     </div>
 
-    <script>
-        const tubeData = {
-            yxlon300: { narrow: 40, wide: 55 },
-            smartEvo300: { narrow: 30, wide: 60 },
-            balteauCeram300: { narrow: 40, wide: 50 }
-        };
+    <div id="marginField" class="hidden">
+      <label for="margin">Voer margepercentage in (%):</label>
+      <input type="number" id="margin" value="25" step="any" min="0">
+    </div>
 
-        document.getElementById('calcType').addEventListener('change', function () {
-            const calcType = this.value;
-            const ffdField = document.getElementById('ffdField');
-            const beamSizeField = document.getElementById('beamSizeField');
-            const marginField = document.getElementById('marginField');
-            const diameterField = document.getElementById('diameterField');
+    <div id="diameterField" class="hidden">
+      <label for="diameter">Diameter van het vat (in cm):</label>
+      <input type="number" id="diameter" step="any" min="0">
+    </div>
 
-            if (calcType === 'size') {
-                ffdField.classList.remove('hidden');
-                beamSizeField.classList.add('hidden');
-                marginField.classList.add('hidden');
-                diameterField.classList.add('hidden');
-            } else if (calcType === 'distance') {
-                ffdField.classList.add('hidden');
-                beamSizeField.classList.remove('hidden');
-                marginField.classList.remove('hidden');
-                diameterField.classList.add('hidden');
-            } else if (calcType === 'vessel') {
-                ffdField.classList.remove('hidden');
-                beamSizeField.classList.add('hidden');
-                marginField.classList.add('hidden');
-                diameterField.classList.remove('hidden');
-            } else {
-                ffdField.classList.add('hidden');
-                beamSizeField.classList.add('hidden');
-                marginField.classList.add('hidden');
-                diameterField.classList.add('hidden');
-            }
-        });
+    <button onclick="calculate()">Bereken</button>
 
-        function calculate() {
-            const tube = document.getElementById('tubeSelect').value;
-            const calcType = document.getElementById('calcType').value;
+    <div id="result" class="result"></div>
+  </div>
 
-            const angles = tubeData[tube];
-            const narrowAngle = angles.narrow * Math.PI / 180;
-            const wideAngle = angles.wide * Math.PI / 180;
+  <script>
+    const tubeData = {
+      yxlon300: { narrow: 40, wide: 55 },
+      smartEvo300: { narrow: 30, wide: 60 },
+      balteauCeram300: { narrow: 40, wide: 50 }
+    };
 
-            const marginPercentage = parseFloat(document.getElementById('margin').value) / 100 + 1;
+    document.getElementById('calcType').addEventListener('change', function () {
+      const calcType = this.value;
+      document.getElementById('ffdField').classList.add('hidden');
+      document.getElementById('beamSizeField').classList.add('hidden');
+      document.getElementById('marginField').classList.add('hidden');
+      document.getElementById('diameterField').classList.add('hidden');
 
-            let resultText = '';
+      if (calcType === 'size') {
+        document.getElementById('ffdField').classList.remove('hidden');
+      } else if (calcType === 'distance') {
+        document.getElementById('beamSizeField').classList.remove('hidden');
+        document.getElementById('marginField').classList.remove('hidden');
+      } else if (calcType === 'vat') {
+        document.getElementById('ffdField').classList.remove('hidden');
+        document.getElementById('diameterField').classList.remove('hidden');
+      }
+    });
 
-            if (calcType === 'size') {
-                const ffd = parseFloat(document.getElementById('ffd').value);
-                if (isNaN(ffd) || ffd <= 0) {
-                    resultText = 'Voer een geldige FFD in.';
-                } else {
-                    const narrowBeam = 2 * ffd * Math.tan(narrowAngle / 2);
-                    const wideBeam = 2 * ffd * Math.tan(wideAngle / 2);
-                    resultText = `De bundel is:<br>Aan de smalle kant: ${narrowBeam.toFixed(2)} cm<br>Aan de brede kant: ${wideBeam.toFixed(2)} cm`;
-                }
-            } else if (calcType === 'distance') {
-                const beamSize = parseFloat(document.getElementById('beamSize').value);
-                if (isNaN(beamSize) || beamSize <= 0) {
-                    resultText = 'Voer een geldig bundelbereik in.';
-                } else {
-                    const ffdNarrow = ((beamSize / 2) / Math.tan(narrowAngle / 2)) * marginPercentage;
-                    const ffdWide = ((beamSize / 2) / Math.tan(wideAngle / 2)) * marginPercentage;
-                    resultText = `De minimale FFD om het gewenste bundelbereik te krijgen is:<br>Bij smalle bundel: ${ffdNarrow.toFixed(2)} cm<br>Bij brede bundel: ${ffdWide.toFixed(2)} cm`;
-                }
-            } else if (calcType === 'vessel') {
-                const ffd = parseFloat(document.getElementById('ffd').value);
-                const diameter = parseFloat(document.getElementById('diameter').value);
-                if (isNaN(ffd) || ffd <= 0 || isNaN(diameter) || diameter <= 0) {
-                    resultText = 'Voer geldige waarden in voor FFD en diameter.';
-                } else {
-                    const sinHalfAngleNarrow = Math.sin(narrowAngle / 2);
-                    const sinHalfAngleWide = Math.sin(wideAngle / 2);
-                    const factor = diameter / (2 * ffd);
+    function calculate() {
+      const tube = document.getElementById('tubeSelect').value;
+      const calcType = document.getElementById('calcType').value;
+      const angles = tubeData[tube];
+      const narrowAngle = angles.narrow;
+      const wideAngle = angles.wide;
+      const resultDiv = document.getElementById('result');
 
-                    const beamWidthNarrow = diameter * Math.asin(factor * sinHalfAngleNarrow);
-                    const beamWidthWide = diameter * Math.asin(factor * sinHalfAngleWide);
-
-                    resultText = `Bundelbreedte bij een vat:<br>Smalle bundel: ${beamWidthNarrow.toFixed(2)} cm<br>Brede bundel: ${beamWidthWide.toFixed(2)} cm`;
-                }
-            }
-
-            document.getElementById('result').innerHTML = resultText;
+      if (calcType === 'size') {
+        const ffd = parseFloat(document.getElementById('ffd').value);
+        if (isNaN(ffd) || ffd <= 0) {
+          resultDiv.innerHTML = 'Voer een geldige FFD in.';
+          return;
         }
+        const narrowBeam = 2 * ffd * Math.tan((narrowAngle / 2) * Math.PI / 180);
+        const wideBeam = 2 * ffd * Math.tan((wideAngle / 2) * Math.PI / 180);
+        resultDiv.innerHTML = `De bundel is:<br>Aan de smalle kant: ${narrowBeam.toFixed(2)} cm<br>Aan de brede kant: ${wideBeam.toFixed(2)} cm`;
+      }
 
-        // Modal functies
-        function openModal(id) {
-            document.getElementById(id).style.display = 'block';
+      else if (calcType === 'distance') {
+        const beamSize = parseFloat(document.getElementById('beamSize').value);
+        const margin = parseFloat(document.getElementById('margin').value) / 100 + 1;
+        if (isNaN(beamSize) || beamSize <= 0) {
+          resultDiv.innerHTML = 'Voer een geldig bundelbereik in.';
+          return;
         }
+        const ffdNarrow = (beamSize / 2) / Math.tan((narrowAngle / 2) * Math.PI / 180) * margin;
+        const ffdWide = (beamSize / 2) / Math.tan((wideAngle / 2) * Math.PI / 180) * margin;
+        resultDiv.innerHTML = `De minimale FFD om het gewenste bundelbereik te krijgen is:<br>Smalle bundel: ${ffdNarrow.toFixed(2)} cm<br>Brede bundel: ${ffdWide.toFixed(2)} cm`;
+      }
 
-        function closeModal(id) {
-            document.getElementById(id).style.display = 'none';
+      else if (calcType === 'vat') {
+        const ffd = parseFloat(document.getElementById('ffd').value);
+        const diameter = parseFloat(document.getElementById('diameter').value);
+        if (isNaN(ffd) || ffd <= 0 || isNaN(diameter) || diameter <= 0) {
+          resultDiv.innerHTML = 'Voer een geldige FFD en diameter in.';
+          return;
         }
-    </script>
+        const R = diameter / 2;
+        const narrowBeam = diameter * Math.asin((diameter / (2 * ffd)) * Math.sin((narrowAngle / 2) * Math.PI / 180));
+        const wideBeam = diameter * Math.asin((diameter / (2 * ffd)) * Math.sin((wideAngle / 2) * Math.PI / 180));
+        resultDiv.innerHTML = `Bundelbreedte op het vatoppervlak:<br>Smalle bundel: ${narrowBeam.toFixed(2)} cm<br>Brede bundel: ${wideBeam.toFixed(2)} cm`;
+      }
+    }
+
+    // Sluit pop-up
+    function closeModal(id) {
+      document.getElementById(id).style.display = "none";
+    }
+
+    function openModal(id) {
+      document.getElementById(id).style.display = "block";
+    }
+  </script>
 </body>
 </html>
